Impl [Nuclio] Make placeholder text more consistent
1. "Enter" instead of "Type"
2. Ellipsis at the end (with no space before it)
3. No a/an articles
4. For multiline: "Enter a/an X on each line..."

Also:
1. Rename "session key" to "access key" in placeholder (code entry type
   and V3IO Volume).
2. Rename "Work dir" to "Work directory" field.

--- a/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
+++ b/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
@@ -28,7 +28,7 @@
                                             data-validation-is-required="true"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-validation-pattern="$ctrl.nameValidationPattern"
-                                            data-placeholder-text="Type project name..."></igz-validating-input-field>
+                                            data-placeholder-text="Enter project name..."></igz-validating-input-field>
             </div>
         </div>
         <div class="field-group">
@@ -45,7 +45,7 @@
                                             data-input-value="$ctrl.data.spec.description"
                                             data-form-object="newProjectForm"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-placeholder-text="Type description..."></igz-validating-input-field>
+                                            data-placeholder-text="Enter description..."></igz-validating-input-field>
             </div>
         </div>
     </form>
