--- a/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
@@ -20,7 +20,7 @@
                                             data-update-data-callback="$ctrl.inputValueCallback(newData)"
                                             data-validation-is-required="true"
                                             data-validation-pattern="$ctrl.validationPatterns.functionName"
-                                            data-placeholder-text="Type function name"
+                                            data-placeholder-text="Enter function name..."
                                             data-validation-max-length="{{$ctrl.validationPatterns.getMaxLength('function.name')}}"
                                             data-uib-tooltip="Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123')."
                                             data-tooltip-popup-delay="500"
