--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -18,7 +18,7 @@
                                                 data-validation-is-required="true"
                                                 data-form-object="$ctrl.functionEventForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, 'displayName')"
-                                                data-placeholder-text="Type a name of event">
+                                                data-placeholder-text="Enter name of event...">
                     </igz-validating-input-field>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                                                 data-input-value="$ctrl.workingCopy.spec.attributes.path"
                                                 data-form-object="$ctrl.functionEventForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, 'path')"
-                                                data-placeholder-text="Type a path">
+                                                data-placeholder-text="Enter path...">
                     </igz-validating-input-field>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                               data-ng-model="$ctrl.workingCopy.spec.body"
                               data-ng-change="$ctrl.onChangeBody()"
                               data-form-object="$ctrl.functionEventForm"
-                              placeholder="Type a body of event"></textarea>
+                              placeholder="Enter body of event..."></textarea>
                 </div>
             </div>
         </form>
