--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -68,7 +68,7 @@
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="spec.description"
                                             data-form-object="$ctrl.basicSettingsForm"
-                                            data-placeholder-text="Type description...">
+                                            data-placeholder-text="Enter description...">
                 </igz-validating-input-field>
             </div>
         </div>
@@ -94,7 +94,7 @@
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                 data-update-data-field="spec.loggerSinks[0].sink"
                                                 data-form-object="$ctrl.basicSettingsForm"
-                                                data-placeholder-text="Type a destination...">
+                                                data-placeholder-text="Enter destination...">
                     </igz-validating-input-field>
                 </div>
             </div>
