--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
@@ -15,7 +15,7 @@
             <igz-validating-input-field class="nuclio-validating-input"
                                         data-field-type="input"
                                         data-is-focused="true"
-                                        data-placeholder-text="Type path..."></igz-validating-input-field>
+                                        data-placeholder-text="Enter path..."></igz-validating-input-field>
         </div>
     </form>
 </div>
