--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -16,7 +16,7 @@
                                             data-input-value="$ctrl.version.spec.build.image"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type an image name..."
+                                            data-placeholder-text="Enter image name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="spec.build.image"
                                             data-is-disabled="$ctrl.disabled"
@@ -30,7 +30,7 @@
                                             data-input-value="$ctrl.version.spec.build.baseImage"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type a base image..."
+                                            data-placeholder-text="Enter base image..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="spec.build.baseImage"
                                             data-is-disabled="$ctrl.disabled"
@@ -44,7 +44,7 @@
                                             data-input-value="$ctrl.version.spec.build.onbuildImage"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type a onbuild image..."
+                                            data-placeholder-text="Enter onbuild image..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="spec.build.onbuildImage"
                                             data-is-disabled="$ctrl.disabled"
@@ -58,7 +58,7 @@
                                             data-input-value="$ctrl.build.commands"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type ..."
+                                            data-placeholder-text="Enter a command on each line..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="commands"
                                             data-is-disabled="$ctrl.disabled"
@@ -88,7 +88,7 @@
                                             data-input-value="$ctrl.build.runtimeAttributes.repositories"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type ..."
+                                            data-placeholder-text="Enter a repository on each line..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="runtimeAttributes.repositories"
                                             class="nuclio-validating-input build-textarea-input"
@@ -103,7 +103,7 @@
                                             data-input-value="$ctrl.build.dependencies"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
-                                            data-placeholder-text="Type ..."
+                                            data-placeholder-text="Enter a dependency on each line..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="dependencies"
                                             class="nuclio-validating-input build-textarea-input"
