--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -20,7 +20,7 @@
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="arguments"
                                             data-form-object="$ctrl.runtimeAttributesForm"
-                                            data-placeholder-text="Type..."></igz-validating-input-field>
+                                            data-placeholder-text="Enter arguments..."></igz-validating-input-field>
             </div>
         </div>
         <div class="row igz-col-100 info-row"
@@ -32,7 +32,7 @@
                                             data-input-value="$ctrl.runtimeAttributes.jvmOptions"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.runtimeAttributesForm"
-                                            data-placeholder-text="Type options"
+                                            data-placeholder-text="Enter an option on each line..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="jvmOptions"
                                             class="nuclio-validating-input build-command-field java-attribute">
