--- a/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -31,7 +31,7 @@
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-form-object="$ctrl.functionFromScratchForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                                data-placeholder-text="Type function name"
+                                                data-placeholder-text="Enter function name..."
                                                 data-uib-tooltip="Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123')."
                                                 data-tooltip-popup-delay="500"
                                                 data-tooltip-append-to-body="true"></igz-validating-input-field>
