Fix [Nuclio] Function list: Filter: Incorrect placeholder text

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -13,7 +13,7 @@
                           data-data-set="$ctrl.functions"
                           data-search-keys="$ctrl.searchKeys"
                           data-search-callback="$ctrl.onUpdateFiltersCounter(searchQuery)"
-                          data-placeholder="Search projects..."
+                          data-placeholder="Search functions..."
                           data-live-search="false"
                           data-search-states="$ctrl.searchStates">
         </igz-search-input>
