Auto-fil HTTP trigger ingresses host

--- a/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
@@ -22,6 +22,7 @@
                         <ncl-edit-item class="common-table-cells-container edit-trigger-row"
                                        data-item="trigger"
                                        data-type="trigger"
+                                       data-default-fields="$ctrl.defaultFields"
                                        data-on-submit-callback="$ctrl.editTriggerCallback(item)"></ncl-edit-item>
                     </ncl-collapsing-row>
                     <div class="common-table-row create-trigger-button"
