Cleanup [Nuclio] Configuration: Resources: GPU Request leftovers

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -116,7 +116,7 @@
                                           data-placeholder="1 - 4"
                                           data-update-number-input-callback="$ctrl.inputGpuValueCallback(newData, field)"
                                           data-update-number-input-field="limits"
-                                          data-min-value="$ctrl.requestsGpuValue || 1"
+                                          data-min-value="1"
                                           data-max-value="4"
                                           data-value-step="1"
                                           data-current-value="$ctrl.limitsGpuValue"></igz-number-input>
