IG-2273 [Nuclio] Configurations Build action menu button clickable area is shifted

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -1,11 +1,14 @@
 <div class="ncl-version-configuration-build"
      data-ng-class="{ disabled: $ctrl.disabled }">
-    <igz-action-menu data-ng-if="$ctrl.isDemoMode()"
-                     data-actions="$ctrl.actions"
-                     data-icon-class="ncl-icon-paperclip"
-                     data-on-fire-action="$ctrl.onFireAction">
-    </igz-action-menu>
-    <div class="title pull-left">Build</div>
+    <div class="configuration-build-title-wrapper">
+        <div class="title pull-left">Build</div>
+
+        <igz-action-menu data-ng-if="$ctrl.isDemoMode()"
+                         data-actions="$ctrl.actions"
+                         data-icon-class="ncl-icon-paperclip"
+                         data-on-fire-action="$ctrl.onFireAction">
+        </igz-action-menu>
+    </div>
     <small class="pull-right" data-ng-if="$ctrl.disabled">Editable for &quot;Edit Online&quot; code entry type only</small>
     <form name="$ctrl.buildForm" class="build-wrapper">
         <div class="igz-row">
