Impl [Nuclio] Code: Rename label "work dir" to "working directory"

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -168,7 +168,7 @@
 
                         <div data-ng-if="$ctrl.selectedEntryType.id === 'github'"
                              class="ncl-code-entry-url">
-                            <div class="field-label">Work dir</div>
+                            <div class="field-label">Work directory</div>
                             <igz-validating-input-field data-field-type="input"
                                                         data-input-name="githubWorkDir"
                                                         data-input-value="$ctrl.version.spec.build.codeEntryAttributes.workDir"
