--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -3,13 +3,14 @@
     <div class="configuration-build-title-wrapper">
         <div class="title pull-left">Build</div>
 
-        <igz-action-menu data-ng-if="$ctrl.isDemoMode()"
+        <igz-action-menu data-ng-if="$ctrl.isDemoMode() && !$ctrl.disabled"
                          data-actions="$ctrl.actions"
                          data-icon-class="ncl-icon-paperclip"
                          data-on-fire-action="$ctrl.onFireAction">
         </igz-action-menu>
+
+        <small class="pull-right" data-ng-if="$ctrl.disabled">Editable for &quot;Edit Online&quot; code entry type only</small>
     </div>
-    <small class="pull-right" data-ng-if="$ctrl.disabled">Editable for &quot;Edit Online&quot; code entry type only</small>
     <form name="$ctrl.buildForm" class="build-wrapper">
         <div class="igz-row">
             <div class="igz-col-100 build-field">
