Fix [Nuclio] Latest changes not taken on Deploy

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -14,7 +14,9 @@
                                      data-use-type="false"
                                      data-item-index="$index"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
-                                     data-change-data-callback="$ctrl.onChangeData(newData, index)"></ncl-key-value-input>
+                                     data-change-data-callback="$ctrl.onChangeData(newData, index)"
+                                     data-submit-on-fly="true">
+                </ncl-key-value-input>
             </div>
         </div>
         <div data-ng-if="$ctrl.isScrollNeeded()"
