--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -181,6 +181,100 @@
                                                         class="nuclio-validating-input">
                             </igz-validating-input-field>
                         </div>
+
+                        <div data-ng-if="$ctrl.selectedEntryType.id === 's3'"
+                             class="section-wrapper ncl-code-entry-s3">
+                            <div class="field-label">Bucket <span class="asterisk"></span></div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="s3Bucket"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_bucket"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="true"
+                                                        data-placeholder-text="my-bucket-name"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_bucket"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Item key <span class="asterisk"></span></div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="s3ItemKey"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_item_key"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="true"
+                                                        data-placeholder-text="my-dir/nuclio_funcs.zip"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_item_key"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Access key ID</div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="s3AccessKeyID"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_access_key_id"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="false"
+                                                        data-placeholder-text="myaccesskeyid"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_access_key_id"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Secret access key</div>
+                            <igz-validating-input-field data-field-type="password"
+                                                        data-input-name="s3SecretAccessKey"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_secret_access_key"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="false"
+                                                        data-placeholder-text="mysecretaccesskey"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_secret_access_key"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Region</div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="s3Region"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_region"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="false"
+                                                        data-placeholder-text="myregion"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_region"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Session token</div>
+                            <igz-validating-input-field data-field-type="password"
+                                                        data-input-name="s3SessionToken"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.s3_session_token"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="false"
+                                                        data-placeholder-text="mys3sessiontoken"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.s3_session_token"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+
+                            <div class="field-label">Work directory</div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="workDir"
+                                                        data-input-value="$ctrl.version.spec.build.code_entry_attributes.work_dir"
+                                                        data-is-focused="false"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-validation-is-required="false"
+                                                        data-placeholder-text="/funcs/nested-dir-test-func"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.build.code_entry_attributes.work_dir"
+                                                        class="nuclio-validating-input">
+                            </igz-validating-input-field>
+                        </div>
                     </form>
                 </div>
             </div>
