fixed attributes format & fields alignment

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -183,7 +183,7 @@
                         </div>
 
                         <div data-ng-if="$ctrl.selectedEntryType.id === 's3'"
-                             class="section-wrapper ncl-code-entry-s3">
+                             class="ncl-code-entry-s3">
                             <div class="field-label">Bucket <span class="asterisk"></span></div>
                             <igz-validating-input-field data-field-type="input"
                                                         data-input-name="s3Bucket"
