Fix scrolling issue

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,8 +1,8 @@
 <div data-ui-layout="{ flow : 'column', dividerSize: 3 }" class="ncl-edit-version-code ncl-version">
     <div ui-layout-container min-size="200px" class="code-section">
-        <div class="code-wrapper-block">
+        <div class="code-wrapper-block" igz-extend-background>
             <div class="igz-scrollable-container code-scrollable-container"
-                 data-ng-scrollbars data-ng-scrollbars-config="$ctrl.scrollConfigHorizontal">
+                 data-ng-scrollbars data-ng-scrollbars-config="$ctrl.scrollConfig">
                 <div class="ncl-edit-version-code-wrapper">
                     <form name="$ctrl.versionCodeForm" class="ncl-edit-version-code-form">
                         <div class="section-wrapper code-entry-section">
